examples/truly_undeclared.etch
fn main() -> void {
  let x: int = undeclared_var;
}
